--- a/requirements.txt
+++ b/requirements.txt
@@ -3,9 +3,9 @@ gspread==6.2.0
 gspread_dataframe==4.0.0
 kiwipiepy==0.20.4
 matplotlib==3.7.1
-numpy==1.24.3
+numpy
 oauth2client==4.1.3
-pandas==2.2.3
+pandas
 plotly==6.0.1
 protobuf==6.30.2
 python_dateutil==2.9.0.post0
