--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,8 @@ numpy
 oauth2client==4.1.3
 pandas
 plotly==6.0.1
-protobuf
+protobuf==6.30.2
 python_dateutil==2.9.0.post0
 streamlit==1.41.1
 streamlit_wordcloud_updated==0.1.1
+google-cloud-bigquery
