--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ altair==5.5.0
 gspread==6.2.0
 gspread_dataframe==4.0.0
 numpy
-kiwipiepy==0.20.4
+kiwipiepy
 matplotlib==3.7.1
 oauth2client==4.1.3
 pandas
